# echotrace

./: .gitignore  README.md  app.py  chat_engine.py  package.json  session_manager.py  start.sh  todos.md  tree_manager.py  visualizer.py
archive/: pyproject.toml
archive/backend/: requirements.txt  run.py
archive/backend/app/: main.py
archive/backend/database/: database.py  models.py
archive/backend/services/: conversation_service.py  openai_service.py
archive/flask/: app.py  utils.py
archive/frontend/: package-lock.json  vite.config.ts
archive/frontend/src/: main.ts
archive/frontend/src/components/: ChatInterface.vue  ConversationTree.vue  SessionManager.vue
archive/frontend/src/services/: conversationService.ts
archive/frontend/src/types/: conversation.ts
backend/: .env.example
backend/schemas/: conversation.py
data/: conversations.json
data/conversations/: conv_659bcbc9.json  conv_9befc1cf.json  conv_d042fbda.json
docs/: Architecture.md  Resources.md  Todos.md
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/components/: BranchManager.vue
frontend/src/pages/: ConversationPage.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: conversationStore.ts  uiStore.ts
frontend/src/types/: vue-flow.ts
web/: components.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web-svelte/: svelte.config.js
web-svelte/src/lib/: ai-config.ts
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
web/src/routes/: +page.svelte  layout.css
(+110 files in other folders)
